@@ -22,10 +22,12 @@ import site.coach_coach.coach_coach_server.coach.exception.DuplicateContactExcep
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundCoachException;
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundMatchingException;
 import site.coach_coach.coach_coach_server.coach.exception.NotFoundPageException;
+import site.coach_coach.coach_coach_server.coach.exception.NotFoundSportException;
 import site.coach_coach.coach_coach_server.coach.repository.CoachRepository;
 import site.coach_coach.coach_coach_server.common.constants.ErrorMessage;
 import site.coach_coach.coach_coach_server.common.domain.RelationFunctionEnum;
 import site.coach_coach.coach_coach_server.common.exception.AccessDeniedException;
+import site.coach_coach.coach_coach_server.like.domain.UserCoachLike;
 import site.coach_coach.coach_coach_server.common.exception.UserNotFoundException;
 import site.coach_coach.coach_coach_server.like.repository.UserCoachLikeRepository;
 import site.coach_coach.coach_coach_server.matching.domain.Matching;
@@ -86,11 +88,10 @@ public class CoachService {
 
 	@Transactional
 	public void addNewCoachingSports(Coach coach, List<CoachingSportDto> coachingSports) {
-		List<Long> sportIds = coachingSports.stream()
-			.map(CoachingSportDto::sportId)
-			.collect(Collectors.toList());
-
-		List<Sport> sports = sportRepository.findAllById(sportIds);
+		List<Sport> sports = coachingSports.stream()
+			.map(coachingSportDto -> sportRepository.findBySportName(coachingSportDto.sportName())
+				.orElseThrow(() -> new NotFoundSportException(ErrorMessage.NOT_FOUND_SPORTS)))
+			.toList();
 
 		List<CoachingSport> coachingSportsEntities = sports.stream()
 			.map(sport -> new CoachingSport(coach, sport))
@@ -130,6 +131,20 @@ public class CoachService {
 		matchingRepository.save(newMatching);
 
 		notificationService.createNotification(user.getUserId(), coachId, RelationFunctionEnum.ask);
+	}
+
+	@Transactional
+	public void deleteMatching(Long coachUserId, Long userId) {
+		User user = userRepository.findById(userId)
+			.orElseThrow(() -> new UserNotFoundException(ErrorMessage.NOT_FOUND_USER));
+
+		Coach coach = coachRepository.findByUser_UserId(coachUserId)
+			.orElseThrow(() -> new NotFoundCoachException(ErrorMessage.NOT_FOUND_COACH));
+
+		Matching matching = matchingRepository.findByUser_UserIdAndCoach_CoachId(user.getUserId(), coach.getCoachId())
+			.orElseThrow(() -> new NotFoundMatchingException(ErrorMessage.NOT_FOUND_MATCHING));
+
+		matchingRepository.delete(matching);
 	}
 
 	@Transactional(readOnly = true)
@@ -211,17 +226,27 @@ public class CoachService {
 	}
 
 	@Transactional
-	public void deleteMatching(Long coachUserId, Long userId) {
+	public void addCoachToFavorites(Long userId, Long coachId) {
 		User user = userRepository.findById(userId)
-			.orElseThrow(() -> new UserNotFoundException(ErrorMessage.NOT_FOUND_USER));
+			.orElseThrow(InvalidUserException::new);
 
-		Coach coach = coachRepository.findByUser_UserId(coachUserId)
+		Coach coach = coachRepository.findById(coachId)
 			.orElseThrow(() -> new NotFoundCoachException(ErrorMessage.NOT_FOUND_COACH));
 
-		Matching matching = matchingRepository.findByUser_UserIdAndCoach_CoachId(user.getUserId(), coach.getCoachId())
-			.orElseThrow(() -> new NotFoundMatchingException(ErrorMessage.NOT_FOUND_MATCHING));
+		if (!userCoachLikeRepository.existsByUser_UserIdAndCoach_CoachId(userId, coachId)) {
+			userCoachLikeRepository.save(new UserCoachLike(null, user, coach));
+			notificationService.createNotification(user.getUserId(), coachId, RelationFunctionEnum.like);
+		}
+	}
 
-		matchingRepository.delete(matching);
+	@Transactional
+	public void deleteCoachToFavorites(Long userId, Long coachId) {
+		coachRepository.findById(coachId)
+			.orElseThrow(() -> new NotFoundCoachException(ErrorMessage.NOT_FOUND_COACH));
+
+		if (userCoachLikeRepository.existsByUser_UserIdAndCoach_CoachId(userId, coachId)) {
+			userCoachLikeRepository.deleteByUser_UserIdAndCoach_CoachId(userId, coachId);
+		}
 	}
 
 	private List<Long> getExistingSportsList(List<Long> sportsList) {
